parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarationList
Rule 2     declarationList -> declaration declarationList
Rule 3     declarationList -> declaration
Rule 4     declaration -> varDeclaration
Rule 5     declaration -> statement
Rule 6     declaration -> constDeclaration
Rule 7     declaration -> funcDeclaration
Rule 8     variable -> DOLLAR IDENTIFIER
Rule 9     varDeclaration -> variable ASSIGN variableType
Rule 10    varDeclaration -> variable ASSIGN STDIN
Rule 11    number -> INTEGER
Rule 12    number -> FLOAT
Rule 13    variableType -> number
Rule 14    variableType -> STRING
Rule 15    variableType -> TRUE
Rule 16    variableType -> FALSE
Rule 17    constDeclaration -> USE CONSTANT IDENTIFIER CONST_ASSIGN variableType
Rule 18    funcDeclaration -> PRINT LEFT_PAR factor RIGHT_PAR
Rule 19    funcDeclaration -> PRINT LEFT_PAR sumLessExpression RIGHT_PAR
Rule 20    sumLessExpression -> variable PLUS_ONE
Rule 21    sumLessExpression -> variable MINUS_ONE
Rule 22    statement -> expression
Rule 23    statement -> conditionalStmt
Rule 24    statement -> loopStmt
Rule 25    conditionalStmt -> matchedif
Rule 26    conditionalStmt -> unmatchedif
Rule 27    matchedif -> IF LEFT_PAR logicalExp RIGHT_PAR LEFT_BRACE declarationList RIGHT_BRACE ELSE LEFT_BRACE declarationList RIGHT_BRACE
Rule 28    unmatchedif -> IF LEFT_PAR logicalExp RIGHT_PAR LEFT_BRACE declarationList RIGHT_BRACE
Rule 29    loopStmt -> WHILE LEFT_PAR logicalExp RIGHT_PAR LEFT_BRACE declarationList RIGHT_BRACE
Rule 30    expression -> logicalExp
Rule 31    expression -> sumLessExpression
Rule 32    logicalExp -> TRUE OR andExp
Rule 33    logicalExp -> FALSE OR andExp
Rule 34    logicalExp -> andExp
Rule 35    andExp -> TRUE AND compExp
Rule 36    andExp -> FALSE AND compExp
Rule 37    andExp -> compExp
Rule 38    compExp -> sumExp compSign sumExp
Rule 39    compExp -> sumExp
Rule 40    compSign -> LESS_OR_EQUAL
Rule 41    compSign -> LESS_THAN
Rule 42    compSign -> MORE_THAN
Rule 43    compSign -> GREATER_OR_EQUAL
Rule 44    compSign -> EQ
Rule 45    compSign -> NEQ
Rule 46    sumExp -> term sumSign sumExp
Rule 47    sumExp -> term
Rule 48    sumSign -> MINUS
Rule 49    sumSign -> PLUS
Rule 50    term -> multiNegExp multiSign term
Rule 51    term -> multiNegExp
Rule 52    multiSign -> EXP
Rule 53    multiSign -> STAR
Rule 54    multiSign -> BETWEEN
Rule 55    multiNegExp -> unaryOp multiNegExp
Rule 56    multiNegExp -> factor
Rule 57    unaryOp -> MINUS
Rule 58    unaryOp -> PLUS
Rule 59    factor -> variable
Rule 60    factor -> variableType
Rule 61    factor -> IDENTIFIER
Rule 62    factor -> LEFT_PAR expression RIGHT_PAR

Terminals, with rules where they appear

AND                  : 35 36
ASSIGN               : 9 10
BETWEEN              : 54
CONSTANT             : 17
CONST_ASSIGN         : 17
DOLLAR               : 8
ELSE                 : 27
EQ                   : 44
EXP                  : 52
FALSE                : 16 33 36
FLOAT                : 12
GREATER_OR_EQUAL     : 43
IDENTIFIER           : 8 17 61
IF                   : 27 28
INTEGER              : 11
LEFT_BRACE           : 27 27 28 29
LEFT_PAR             : 18 19 27 28 29 62
LESS_OR_EQUAL        : 40
LESS_THAN            : 41
MINUS                : 48 57
MINUS_ONE            : 21
MORE_THAN            : 42
NEQ                  : 45
OR                   : 32 33
PLUS                 : 49 58
PLUS_ONE             : 20
PRINT                : 18 19
RIGHT_BRACE          : 27 27 28 29
RIGHT_PAR            : 18 19 27 28 29 62
STAR                 : 53
STDIN                : 10
STRING               : 14
TRUE                 : 15 32 35
USE                  : 17
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

andExp               : 32 33 34
compExp              : 35 36 37
compSign             : 38
conditionalStmt      : 23
constDeclaration     : 6
declaration          : 2 3
declarationList      : 1 2 27 27 28 29
expression           : 22 62
factor               : 18 56
funcDeclaration      : 7
logicalExp           : 27 28 29 30
loopStmt             : 24
matchedif            : 25
multiNegExp          : 50 51 55
multiSign            : 50
number               : 13
program              : 0
statement            : 5
sumExp               : 38 38 39 46
sumLessExpression    : 19 31
sumSign              : 46
term                 : 46 47 50
unaryOp              : 55
unmatchedif          : 26
varDeclaration       : 4
variable             : 9 10 20 21 59
variableType         : 9 17 60

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . declarationList
    (2) declarationList -> . declaration declarationList
    (3) declarationList -> . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . statement
    (6) declaration -> . constDeclaration
    (7) declaration -> . funcDeclaration
    (9) varDeclaration -> . variable ASSIGN variableType
    (10) varDeclaration -> . variable ASSIGN STDIN
    (22) statement -> . expression
    (23) statement -> . conditionalStmt
    (24) statement -> . loopStmt
    (17) constDeclaration -> . USE CONSTANT IDENTIFIER CONST_ASSIGN variableType
    (18) funcDeclaration -> . PRINT LEFT_PAR factor RIGHT_PAR
    (19) funcDeclaration -> . PRINT LEFT_PAR sumLessExpression RIGHT_PAR
    (8) variable -> . DOLLAR IDENTIFIER
    (30) expression -> . logicalExp
    (31) expression -> . sumLessExpression
    (25) conditionalStmt -> . matchedif
    (26) conditionalStmt -> . unmatchedif
    (29) loopStmt -> . WHILE LEFT_PAR logicalExp RIGHT_PAR LEFT_BRACE declarationList RIGHT_BRACE
    (32) logicalExp -> . TRUE OR andExp
    (33) logicalExp -> . FALSE OR andExp
    (34) logicalExp -> . andExp
    (20) sumLessExpression -> . variable PLUS_ONE
    (21) sumLessExpression -> . variable MINUS_ONE
    (27) matchedif -> . IF LEFT_PAR logicalExp RIGHT_PAR LEFT_BRACE declarationList RIGHT_BRACE ELSE LEFT_BRACE declarationList RIGHT_BRACE
    (28) unmatchedif -> . IF LEFT_PAR logicalExp RIGHT_PAR LEFT_BRACE declarationList RIGHT_BRACE
    (35) andExp -> . TRUE AND compExp
    (36) andExp -> . FALSE AND compExp
    (37) andExp -> . compExp
    (38) compExp -> . sumExp compSign sumExp
    (39) compExp -> . sumExp
    (46) sumExp -> . term sumSign sumExp
    (47) sumExp -> . term
    (50) term -> . multiNegExp multiSign term
    (51) term -> . multiNegExp
    (55) multiNegExp -> . unaryOp multiNegExp
    (56) multiNegExp -> . factor
    (57) unaryOp -> . MINUS
    (58) unaryOp -> . PLUS
    (59) factor -> . variable
    (60) factor -> . variableType
    (61) factor -> . IDENTIFIER
    (62) factor -> . LEFT_PAR expression RIGHT_PAR
    (13) variableType -> . number
    (14) variableType -> . STRING
    (15) variableType -> . TRUE
    (16) variableType -> . FALSE
    (11) number -> . INTEGER
    (12) number -> . FLOAT

    USE             shift and go to state 1
    PRINT           shift and go to state 7
    DOLLAR          shift and go to state 24
    WHILE           shift and go to state 6
    TRUE            shift and go to state 13
    FALSE           shift and go to state 30
    IF              shift and go to state 28
    MINUS           shift and go to state 14
    PLUS            shift and go to state 16
    IDENTIFIER      shift and go to state 20
    LEFT_PAR        shift and go to state 36
    STRING          shift and go to state 10
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 32

    varDeclaration                 shift and go to state 2
    variableType                   shift and go to state 3
    matchedif                      shift and go to state 4
    number                         shift and go to state 11
    loopStmt                       shift and go to state 5
    logicalExp                     shift and go to state 8
    multiNegExp                    shift and go to state 9
    conditionalStmt                shift and go to state 12
    program                        shift and go to state 15
    statement                      shift and go to state 17
    factor                         shift and go to state 18
    sumLessExpression              shift and go to state 21
    constDeclaration               shift and go to state 22
    declarationList                shift and go to state 23
    andExp                         shift and go to state 29
    declaration                    shift and go to state 26
    variable                       shift and go to state 27
    term                           shift and go to state 25
    unaryOp                        shift and go to state 31
    compExp                        shift and go to state 33
    sumExp                         shift and go to state 34
    funcDeclaration                shift and go to state 35
    unmatchedif                    shift and go to state 37
    expression                     shift and go to state 38

state 1

    (17) constDeclaration -> USE . CONSTANT IDENTIFIER CONST_ASSIGN variableType

    CONSTANT        shift and go to state 39


state 2

    (4) declaration -> varDeclaration .

    IF              reduce using rule 4 (declaration -> varDeclaration .)
    WHILE           reduce using rule 4 (declaration -> varDeclaration .)
    USE             reduce using rule 4 (declaration -> varDeclaration .)
    DOLLAR          reduce using rule 4 (declaration -> varDeclaration .)
    TRUE            reduce using rule 4 (declaration -> varDeclaration .)
    FALSE           reduce using rule 4 (declaration -> varDeclaration .)
    PRINT           reduce using rule 4 (declaration -> varDeclaration .)
    MINUS           reduce using rule 4 (declaration -> varDeclaration .)
    PLUS            reduce using rule 4 (declaration -> varDeclaration .)
    STRING          reduce using rule 4 (declaration -> varDeclaration .)
    IDENTIFIER      reduce using rule 4 (declaration -> varDeclaration .)
    LEFT_PAR        reduce using rule 4 (declaration -> varDeclaration .)
    INTEGER         reduce using rule 4 (declaration -> varDeclaration .)
    FLOAT           reduce using rule 4 (declaration -> varDeclaration .)
    $end            reduce using rule 4 (declaration -> varDeclaration .)
    RIGHT_BRACE     reduce using rule 4 (declaration -> varDeclaration .)


state 3

    (60) factor -> variableType .

    RIGHT_PAR       reduce using rule 60 (factor -> variableType .)
    EXP             reduce using rule 60 (factor -> variableType .)
    STAR            reduce using rule 60 (factor -> variableType .)
    BETWEEN         reduce using rule 60 (factor -> variableType .)
    MINUS           reduce using rule 60 (factor -> variableType .)
    PLUS            reduce using rule 60 (factor -> variableType .)
    LESS_OR_EQUAL   reduce using rule 60 (factor -> variableType .)
    LESS_THAN       reduce using rule 60 (factor -> variableType .)
    MORE_THAN       reduce using rule 60 (factor -> variableType .)
    GREATER_OR_EQUAL reduce using rule 60 (factor -> variableType .)
    EQ              reduce using rule 60 (factor -> variableType .)
    NEQ             reduce using rule 60 (factor -> variableType .)
    IF              reduce using rule 60 (factor -> variableType .)
    WHILE           reduce using rule 60 (factor -> variableType .)
    USE             reduce using rule 60 (factor -> variableType .)
    DOLLAR          reduce using rule 60 (factor -> variableType .)
    TRUE            reduce using rule 60 (factor -> variableType .)
    FALSE           reduce using rule 60 (factor -> variableType .)
    PRINT           reduce using rule 60 (factor -> variableType .)
    STRING          reduce using rule 60 (factor -> variableType .)
    IDENTIFIER      reduce using rule 60 (factor -> variableType .)
    LEFT_PAR        reduce using rule 60 (factor -> variableType .)
    INTEGER         reduce using rule 60 (factor -> variableType .)
    FLOAT           reduce using rule 60 (factor -> variableType .)
    $end            reduce using rule 60 (factor -> variableType .)
    RIGHT_BRACE     reduce using rule 60 (factor -> variableType .)


state 4

    (25) conditionalStmt -> matchedif .

    IF              reduce using rule 25 (conditionalStmt -> matchedif .)
    WHILE           reduce using rule 25 (conditionalStmt -> matchedif .)
    USE             reduce using rule 25 (conditionalStmt -> matchedif .)
    DOLLAR          reduce using rule 25 (conditionalStmt -> matchedif .)
    TRUE            reduce using rule 25 (conditionalStmt -> matchedif .)
    FALSE           reduce using rule 25 (conditionalStmt -> matchedif .)
    PRINT           reduce using rule 25 (conditionalStmt -> matchedif .)
    MINUS           reduce using rule 25 (conditionalStmt -> matchedif .)
    PLUS            reduce using rule 25 (conditionalStmt -> matchedif .)
    STRING          reduce using rule 25 (conditionalStmt -> matchedif .)
    IDENTIFIER      reduce using rule 25 (conditionalStmt -> matchedif .)
    LEFT_PAR        reduce using rule 25 (conditionalStmt -> matchedif .)
    INTEGER         reduce using rule 25 (conditionalStmt -> matchedif .)
    FLOAT           reduce using rule 25 (conditionalStmt -> matchedif .)
    $end            reduce using rule 25 (conditionalStmt -> matchedif .)
    RIGHT_BRACE     reduce using rule 25 (conditionalStmt -> matchedif .)


state 5

    (24) statement -> loopStmt .

    IF              reduce using rule 24 (statement -> loopStmt .)
    WHILE           reduce using rule 24 (statement -> loopStmt .)
    USE             reduce using rule 24 (statement -> loopStmt .)
    DOLLAR          reduce using rule 24 (statement -> loopStmt .)
    TRUE            reduce using rule 24 (statement -> loopStmt .)
    FALSE           reduce using rule 24 (statement -> loopStmt .)
    PRINT           reduce using rule 24 (statement -> loopStmt .)
    MINUS           reduce using rule 24 (statement -> loopStmt .)
    PLUS            reduce using rule 24 (statement -> loopStmt .)
    STRING          reduce using rule 24 (statement -> loopStmt .)
    IDENTIFIER      reduce using rule 24 (statement -> loopStmt .)
    LEFT_PAR        reduce using rule 24 (statement -> loopStmt .)
    INTEGER         reduce using rule 24 (statement -> loopStmt .)
    FLOAT           reduce using rule 24 (statement -> loopStmt .)
    $end            reduce using rule 24 (statement -> loopStmt .)
    RIGHT_BRACE     reduce using rule 24 (statement -> loopStmt .)


state 6

    (29) loopStmt -> WHILE . LEFT_PAR logicalExp RIGHT_PAR LEFT_BRACE declarationList RIGHT_BRACE

    LEFT_PAR        shift and go to state 40


state 7

    (18) funcDeclaration -> PRINT . LEFT_PAR factor RIGHT_PAR
    (19) funcDeclaration -> PRINT . LEFT_PAR sumLessExpression RIGHT_PAR

    LEFT_PAR        shift and go to state 41


state 8

    (30) expression -> logicalExp .

    IF              reduce using rule 30 (expression -> logicalExp .)
    WHILE           reduce using rule 30 (expression -> logicalExp .)
    USE             reduce using rule 30 (expression -> logicalExp .)
    DOLLAR          reduce using rule 30 (expression -> logicalExp .)
    TRUE            reduce using rule 30 (expression -> logicalExp .)
    FALSE           reduce using rule 30 (expression -> logicalExp .)
    PRINT           reduce using rule 30 (expression -> logicalExp .)
    MINUS           reduce using rule 30 (expression -> logicalExp .)
    PLUS            reduce using rule 30 (expression -> logicalExp .)
    STRING          reduce using rule 30 (expression -> logicalExp .)
    IDENTIFIER      reduce using rule 30 (expression -> logicalExp .)
    LEFT_PAR        reduce using rule 30 (expression -> logicalExp .)
    INTEGER         reduce using rule 30 (expression -> logicalExp .)
    FLOAT           reduce using rule 30 (expression -> logicalExp .)
    $end            reduce using rule 30 (expression -> logicalExp .)
    RIGHT_PAR       reduce using rule 30 (expression -> logicalExp .)
    RIGHT_BRACE     reduce using rule 30 (expression -> logicalExp .)


state 9

    (50) term -> multiNegExp . multiSign term
    (51) term -> multiNegExp .
    (52) multiSign -> . EXP
    (53) multiSign -> . STAR
    (54) multiSign -> . BETWEEN

    MINUS           reduce using rule 51 (term -> multiNegExp .)
    PLUS            reduce using rule 51 (term -> multiNegExp .)
    LESS_OR_EQUAL   reduce using rule 51 (term -> multiNegExp .)
    LESS_THAN       reduce using rule 51 (term -> multiNegExp .)
    MORE_THAN       reduce using rule 51 (term -> multiNegExp .)
    GREATER_OR_EQUAL reduce using rule 51 (term -> multiNegExp .)
    EQ              reduce using rule 51 (term -> multiNegExp .)
    NEQ             reduce using rule 51 (term -> multiNegExp .)
    RIGHT_PAR       reduce using rule 51 (term -> multiNegExp .)
    IF              reduce using rule 51 (term -> multiNegExp .)
    WHILE           reduce using rule 51 (term -> multiNegExp .)
    USE             reduce using rule 51 (term -> multiNegExp .)
    DOLLAR          reduce using rule 51 (term -> multiNegExp .)
    TRUE            reduce using rule 51 (term -> multiNegExp .)
    FALSE           reduce using rule 51 (term -> multiNegExp .)
    PRINT           reduce using rule 51 (term -> multiNegExp .)
    STRING          reduce using rule 51 (term -> multiNegExp .)
    IDENTIFIER      reduce using rule 51 (term -> multiNegExp .)
    LEFT_PAR        reduce using rule 51 (term -> multiNegExp .)
    INTEGER         reduce using rule 51 (term -> multiNegExp .)
    FLOAT           reduce using rule 51 (term -> multiNegExp .)
    $end            reduce using rule 51 (term -> multiNegExp .)
    RIGHT_BRACE     reduce using rule 51 (term -> multiNegExp .)
    EXP             shift and go to state 44
    STAR            shift and go to state 42
    BETWEEN         shift and go to state 45

    multiSign                      shift and go to state 43

state 10

    (14) variableType -> STRING .

    IF              reduce using rule 14 (variableType -> STRING .)
    WHILE           reduce using rule 14 (variableType -> STRING .)
    USE             reduce using rule 14 (variableType -> STRING .)
    DOLLAR          reduce using rule 14 (variableType -> STRING .)
    TRUE            reduce using rule 14 (variableType -> STRING .)
    FALSE           reduce using rule 14 (variableType -> STRING .)
    PRINT           reduce using rule 14 (variableType -> STRING .)
    MINUS           reduce using rule 14 (variableType -> STRING .)
    PLUS            reduce using rule 14 (variableType -> STRING .)
    STRING          reduce using rule 14 (variableType -> STRING .)
    IDENTIFIER      reduce using rule 14 (variableType -> STRING .)
    LEFT_PAR        reduce using rule 14 (variableType -> STRING .)
    INTEGER         reduce using rule 14 (variableType -> STRING .)
    FLOAT           reduce using rule 14 (variableType -> STRING .)
    $end            reduce using rule 14 (variableType -> STRING .)
    RIGHT_PAR       reduce using rule 14 (variableType -> STRING .)
    EXP             reduce using rule 14 (variableType -> STRING .)
    STAR            reduce using rule 14 (variableType -> STRING .)
    BETWEEN         reduce using rule 14 (variableType -> STRING .)
    LESS_OR_EQUAL   reduce using rule 14 (variableType -> STRING .)
    LESS_THAN       reduce using rule 14 (variableType -> STRING .)
    MORE_THAN       reduce using rule 14 (variableType -> STRING .)
    GREATER_OR_EQUAL reduce using rule 14 (variableType -> STRING .)
    EQ              reduce using rule 14 (variableType -> STRING .)
    NEQ             reduce using rule 14 (variableType -> STRING .)
    RIGHT_BRACE     reduce using rule 14 (variableType -> STRING .)


state 11

    (13) variableType -> number .
